Changed object graph creation method to be edge at a time
TODO
- Use createFromEdge in createFromMultipleColumns
- Graph Test
-- oneSectionOneVertexManyEdge
-- oneSectionManyVertexManyEdge
-- manySectionManyVertexOneEdge
--- createFromSingleColumn will be createFromList
--- Make createFromListOfList
- Path Test
-- start s1 start _ f1 v1 f2 v2 end s2 end